--- a/css/responsive.css
+++ b/css/responsive.css
@@ -70,9 +70,9 @@
         font-size: 2.7rem;
     }
     /* menu ----*/
-    .logo img {
-        min-height: 9rem;
-    }
+    /* .logo img {
+        max-height: 6rem;
+    } */
     .line-1,
     .line-2,
     .line-3 {
@@ -232,10 +232,10 @@
     .logo{
         text-align: center;
     }
-    .logo img {
-        min-height: 12rem;
+    /* .logo img {
+        max-height: 12rem;
         object-fit: contain;
-    }
+    } */
     .nav {
         display: flex;
         justify-content: space-around;
@@ -439,10 +439,10 @@
     .logo{
         text-align: center;
     }
-    .logo img {
-        max-height: 12rem;
+    /* .logo img {
+        max-height: 8rem;
         object-fit: contain;
-    }
+    } */
     .nav {
         display: flex;
         justify-content: space-around;
