--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@
     
     .nav {
         display: none;
-        background-color: #6d7170;
+        background-color: #7d8578;
         align-items: center;
     }
 
@@ -322,7 +322,7 @@
         cursor: pointer;
         transition: 0.4s ease-in;
         z-index: 111;
-        background-color: #6d7170;
+        background-color: #7d8578;
         color: white
     }
     
@@ -374,7 +374,7 @@
         overflow: hidden;
         display: none;
         transform: scale(0);
-        background-color: #6d7170;
+        background-color: #7d8578;
         width: 100%;
         height: 100vh;
     }
@@ -424,7 +424,7 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
-        background-image: url(../img/hero.jpg);
+        background-image: url(../img/hero-dim2.jpg);
         background-size: cover;
         background-position: center;
         /* background-blend-mode: soft-light;
@@ -786,7 +786,7 @@
         padding-top: 1.5rem;
     }
     
-    .contacto p {
+    .contacto p{
         text-align: center;
         color: white;
         padding: 2rem;
